chore(clean): removed index quarto files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 exercises/exercises_files/
 exercises/testing_exercises_files/
+index_files/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
