feat(quarto): +config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 exercises/exercises_files/
 exercises/testing_exercises_files/
 index_files/
+docs/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -176,3 +177,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+/.quarto/
